1.物品分类 2.完善了配方解锁 3.平凡的纸可以食用了

--- a/behavior_packs/not-only-essentials/recipes/apple_to_ender_apple.json
+++ b/behavior_packs/not-only-essentials/recipes/apple_to_ender_apple.json
@@ -17,6 +17,14 @@
     "result": {
       "item": "noe:ender_apple",
       "count": 1
-    }
+    },
+    "unlock": [
+      {
+        "item": "minecraft:apple"
+      },
+      {
+        "item": "noe:ender_dust"
+      }
+    ]
   }
 }
