--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "@minecraft/common": "1.2.0",
+    "@minecraft/math": "^2.3.1",
     "@minecraft/server": "2.5.0-beta.1.21.132-stable",
     "@minecraft/server-ui": "2.1.0-beta.1.21.132-stable",
     "@minecraft/vanilla-data": "^1.21.90"
