--- a/behavior_packs/not-only-essentials/items/ender_apple.json
+++ b/behavior_packs/not-only-essentials/items/ender_apple.json
@@ -4,7 +4,7 @@
     "description": {
       "identifier": "noe:ender_apple",
       "menu_category": {
-        "category": "items"
+        "category": "nature"
       }
     },
     "components": {
