--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "scripting-starter",
   "version": "0.1.0",
-  "productName": "Minecraft TypeScript Starter Project",
-  "description": "Minecraft TypeScript Starter Project",
+  "productName": "Not Only Essentials Addon",
+  "description": "Not Only Essentials Addon",
   "private": true,
   "devDependencies": {
     "@minecraft/core-build-tasks": "^5.5.0",
