--- a/behavior_packs/not-only-essentials/manifest.json
+++ b/behavior_packs/not-only-essentials/manifest.json
@@ -1,15 +1,15 @@
 {
   "format_version": 2,
   "header": {
-    "name": "not-only-essentials",
-    "description": "not-only-essentials is a add-on that adds various useful features to Minecraft.",
+    "name": "基础++|not-only-essentials",
+    "description": "基础++ 向游戏内添加了非常多有趣的新东西。\ngithub页面:https://github.com/huaji121/not-only-essentials",
     "uuid": "019bb512-0be5-4f0d-9594-87f9f22e60ee",
     "version": [1, 1, 0],
     "min_engine_version": [1, 20, 30]
   },
   "modules": [
     {
-      "description": "Script resources",
+      "description": "基础++ 脚本包",
       "language": "javascript",
       "type": "script",
       "uuid": "7b6c38dd-cb4c-474e-8043-095e4a1feaf4",
